[metadata]
name = igmov
version = 0.0.0-alpha-2
author = Ngupuk
author-email = wafax.4@gmail.com
home-page = https://github.com/ngupuk/igmov
description = Video generator using Ngupuk templates.
long-description = file: README.md
long_description_content_type = text/markdown
license = MIT
platform = any
keywords = Python, video, editor
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python

[options]
zip_safe = false
python_requires = >= 3.5.*
setup_requires =
    setuptools
    wheel
install_requires = 
    urllib3
    moviepy

[check]
metadata = true
restructuredtext = false
strict = true
