[metadata]
name = igmov
version = 0.0.2-beta
author = Ngupuk
author-email = wafax.4@gmail.com
home-page = https://github.com/ngupuk/igmov
description = Video generator using Ngupuk templates.
long-description = file: README.md
long_description_content_type = text/markdown
license = MIT
platform = any
keywords = Python, video, editor
classifiers =
    Programming Language :: Python

[options]
zip_safe = false
python_requires = >= 3.5.*
setup_requires =
    setuptools
    wheel
install_requires = 
    urllib3
    moviepy
    numpy
    scikit-image

[check]
metadata = true
restructuredtext = false
strict = true

[flake8]
ignore = E111, E501, E722
exclued = book
